--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>2.6.0-SNAPSHOT</version>
   <modules>
     <module>spring-petclinic-server</module>
+    <module>spring-petclinic-e2e-tests</module>
   </modules>
 
   <parent>
