--- a/spring-petclinic-server/pom.xml
+++ b/spring-petclinic-server/pom.xml
@@ -12,6 +12,11 @@
   <artifactId>spring-petclinic-server</artifactId>
 
   <dependencies>
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version>
+    </dependency>
     <!-- Spring and Spring Boot dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
