[E2E] Added test demonstrating running application inside docker container

--- a/spring-petclinic-e2e-tests/pom.xml
+++ b/spring-petclinic-e2e-tests/pom.xml
@@ -136,7 +136,8 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.2</version> <!-- Required for RestAssured/HttpClient otherwise NoClassFound is thrown, probably it's excluded somewhere-->
+      <version>1.2
+      </version> <!-- Required for RestAssured/HttpClient otherwise NoClassFound is thrown, probably it's excluded somewhere-->
       <scope>test</scope>
     </dependency>
     <dependency>
