[E2E] Fixed a problem with missing dependency to PetClinicApplication caused by maven shade and repackaging plugin

--- a/spring-petclinic-e2e-tests/pom.xml
+++ b/spring-petclinic-e2e-tests/pom.xml
@@ -52,6 +52,8 @@
       <groupId>org.springframework.samples</groupId>
       <artifactId>spring-petclinic-server</artifactId>
       <version>${project.version}</version>
+      <classifier>original</classifier>
+      <scope>compile</scope>
       <exclusions>
         <exclusion>
           <groupId>ch.qos.logback</groupId>
