--- a/spring-petclinic-e2e-tests/pom.xml
+++ b/spring-petclinic-e2e-tests/pom.xml
@@ -79,6 +79,14 @@
       <version>1.6.1</version>
       <scope>test</scope>
     </dependency>
+<!--
+    <dependency>
+      <groupId>io.github.artsok</groupId>
+      <artifactId>rerunner-jupiter</artifactId>
+      <version>2.1.6</version>
+      <scope>test</scope>
+    </dependency>
+-->
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>postgresql</artifactId>
