--- a/spring-petclinic-e2e-tests/pom.xml
+++ b/spring-petclinic-e2e-tests/pom.xml
@@ -165,6 +165,10 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
